# gest_detectron

./: .gitattributes  GestDetectron_SAM_Notebook.ipynb  GestDetectron_SAM_Notebook_Interview_WORKING.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
gest_detectron/: display_landmark.py  initialize_mask.py  initialize_sam2.py  main.py  render_sam.py
models/: dinov2_hand_trained_segmentation.pth
